Installation d'une extention afin de pouvoir utiliser les slug plutôt que les identifiants

--- a/templates/cinema/index.html.twig
+++ b/templates/cinema/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Accueil{% endblock %}
+{% block title %}Hello CinemaController!{% endblock %}
 
 {% block body %}
 {% endblock %}
